Support labels to run build on Mesos. (#30)
Summary:
This enables the plugin to actually run builds on Mesos. I validated the
behavior manually since a full integration test requires some work with
the Jenkins fixture. To get everything working I added a template for
pod specs that is configured by users and introduced the provisioning
strategy.

We also go back to Java 8 since some Jenkins components do not
support Java 11 yet.

JIRA issues: DCOS_OSS-5056