@@ -7,9 +7,11 @@ import com.mesosphere.usi.core.models.PodSpec;
 import com.mesosphere.usi.core.models.RunSpec;
 import com.mesosphere.usi.core.models.resources.ScalarRequirement;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Paths;
+import java.util.Arrays;
 import java.util.List;
 import scala.Option;
 import scala.collection.JavaConverters;
@@ -95,12 +97,12 @@ public class MesosSlavePodSpec {
     }
 
     public PodSpec build() throws MalformedURLException, URISyntaxException {
-      final var runSpec =
+      final RunSpec runSpec =
           new RunSpec(
-              convertListToSeq(List.of(this.cpus, this.memory)),
+              convertListToSeq(Arrays.asList(this.cpus, this.memory)),
               this.buildCommand(),
               this.role,
-              convertListToSeq(List.of(buildFetchUri())));
+              convertListToSeq(Arrays.asList(buildFetchUri())));
       return new PodSpec(this.id, this.goal, runSpec);
     }
 
@@ -128,7 +130,7 @@ public class MesosSlavePodSpec {
 
     /** @return the {@link FetchUri} for the Jenkins agent jar file. */
     private FetchUri buildFetchUri() throws MalformedURLException, URISyntaxException {
-      final var uri = new URL(this.jenkinsMaster, AGENT_JAR_URI_SUFFIX).toURI();
+      final URI uri = new URL(this.jenkinsMaster, AGENT_JAR_URI_SUFFIX).toURI();
       return new FetchUri(uri, false, false, false, Option.empty());
     }
 
